--- a/IntrestManagementSystem/src/main/resources/static/index.html
+++ b/IntrestManagementSystem/src/main/resources/static/index.html
@@ -111,7 +111,7 @@
                 amountTook: parseFloat(document.getElementById("amountTook").value)
             };
 
-            fetch("http://localhost:8080/api/clients", {
+            fetch("mysql://root:jZCVnJqtUciEXxzkjnelepYwjteutbBB@maglev.proxy.rlwy.net:21401/railway/api/clients", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(clientData)
